# phyto-plankton-classification

./: .gitignore  Dockerfile  JenkinsConstants.groovy  Jenkinsfile  README copy.md  README.md  README_marketplace.md  ai4-metadata.yml  metadata.json  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: githubsync.yml
.sqa/: Dockerfile.cicd  config.yml
data/dataset_files_DS/: aphia_ids.txt  test.txt
data/images/: ecotaxa_update_DS.tsv
docker/jupyter/: jupyter_notebook_config.py
etc/: config.yaml
models/2025-04-04_092917/dataset_files/: classes.txt
models/2025-04-04_093436/dataset_files/: classes.txt  test.txt  val.txt
models/2025-04-04_093813/dataset_files/: classes.txt  test.txt  val.txt
models/2025-04-04_094930/dataset_files/: README.md
models/2025-04-04_095454/dataset_files/: classes.txt
models/2025-04-04_101611/dataset_files/: val.txt
models/phytoplankton_vliz/conf/: conf.json  conf.txt
models/phytoplankton_vliz/dataset_files/: aphia_ids.txt  classes.txt  test.txt  val.txt
notebooks/: 1.0-Dataset_exploration.ipynb  1.1-Image_transformation.ipynb  1.2-Image_augmentation.ipynb  3.0-Computing_predictions.ipynb  3.1-Prediction_statistics.ipynb
oscar/: oscar.py  oscar_as.py
planktonclas/: api.py  config.py  config_test.py  data_utils.py  model_utils.py  optimizers.py  paths.py  plot_utils.py  test_utils.py  train_runfile.py  utils.py
planktonclas/visualization/: guided_backprop.py  integrated_gradients.py  saliency.py  utils.py  visual_backprop.py
references/: README_marketplace.md
tests/: test_api.py
(+6 files in other folders)
