[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "planktonclas"
authors = [
    { name = "Ignacio Heredia (CSIC)", email = "iheredia@ifca.unican.es" },
    { name = "Wout Decrop (VLIZ)", email = "wout.decrop@vliz.be" },
]
description = "Identify the species level of Plankton for 95 classes. Working on OSCAR"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache 2.0" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/phyto-plankton-classification"
"Bug Tracker" = "https://github.com/ai4os-hub/phyto-plankton-classification/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "PHYTO_PLANKTON_CLASSIFICATION_DATA_PATH=tests/data",
    "PHYTO_PLANKTON_CLASSIFICATION_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [ "planktonclas" ]

[tool.setuptools.package-dir]
"planktonclas" = "planktonclas"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
planktonclas = "planktonclas.api"